--- a/styles.css
+++ b/styles.css
@@ -67,13 +67,19 @@ header {
     margin: 2rem;
 }
 
-.main-content {
+.main-content{
+    display: flex;
+    flex-direction: row;
+}
+
+.white {
     background-color: #c4c4c4;
     width: 50%;
     height: 54.5rem;
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
 }
 
 .box-01{
@@ -129,5 +135,79 @@ header {
     width: 2rem;
 }
 
+.Price {
+    margin: 2rem;
+    font-size: 1.3rem;
+    display: flex;
+    flex-direction: row;
+    gap: 0.5rem;
+    margin-left: 25rem;
+}
+
+.price-text {
+    background-color: #b8b8b8;
+}
+
+.buttons{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    gap: 10rem;
+}
+
+.cancel-btn {
+    background-color: #e75757;
+    width: 18rem;
+    height: 4rem;
+    border-radius: 1.25rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 1rem;
+}
+
+.cancel-btn img{
+    height: 50%;
+    margin: 1rem;
+}
+
+.checkout-btn {
+    background-color: #579ae7;
+    width: 18rem;
+    height: 4rem;
+    border-radius: 1.25rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 1rem;
+}
+
+.checkout-btn img{
+    height: 50%;
+    margin: 1rem;
+}
 
 
+.black-box {
+    background-color: #000000;
+    width: 50%;
+    height: 54.5rem;
+    display: flex;
+    flex-direction: column;
+}
+
+.text-checkout {
+    color: #e9e9e9;
+    font-size: 2rem;
+    display: flex;
+    text-align: start;
+    margin: 4rem;
+}
+
+.line-02 {
+    color: #e9e9e9;
+    display: flex;
+    text-align: start;
+    width: 15rem;
+    height: 1.5rem;
+}
