--- a/styles.css
+++ b/styles.css
@@ -196,18 +196,41 @@ header {
     flex-direction: column;
 }
 
+.text-top{
+    display: flex;
+    flex-direction: column;
+}
+
 .text-checkout {
     color: #e9e9e9;
     font-size: 2rem;
     display: flex;
     text-align: start;
+    flex-direction: column;
+    gap: 0.075rem;
     margin: 4rem;
 }
 
 .line-02 {
+    display: flex;
+    background-color: #f2efe5;
+    width: 29rem;
+    height: 0.075rem;
+}
+
+.text-second {
     color: #e9e9e9;
+    font-size: 1.5rem;
     display: flex;
     text-align: start;
-    width: 15rem;
-    height: 1.5rem;
+    flex-direction: column;
+    gap: 0.075rem;
+    margin-left: 4rem;
+}
+
+.line-03 {
+    display: flex;
+    background-color: #f2efe5;
+    width: 8rem;
+    height: 0.075rem;
 }
