--- a/styles.css
+++ b/styles.css
@@ -234,3 +234,31 @@ header {
     width: 8rem;
     height: 0.075rem;
 }
+
+.icons {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 3rem;
+}
+
+.card-mastercard{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 3rem;
+}
+
+.footer {
+    color: #e9e9e9;
+    font-size: 1.5rem;
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-end;
+    text-align: end;
+    flex-direction: row;
+    gap: 10rem;
+    margin-left: 4rem;
+    margin-top: 11rem;
+}
